# assisting-bounded-humans

./: .gitignore  Pipfile  README.md  customPolicyPPO.py  data_types.py  deterministic_mdp.py  environment.yml  evaluate_reward_model.py  graph_mdp.py  gridworlds.py  hiding_env.py  human_feedback_model.py  imitation_modules.py  installed_packages.txt  myoutput.txt  notebook_exp.ipynb  notes.md  observability_wrappers.py  package-list.txt  partial_observability.py  porlhf.yml  porlhf_envs.py  porlhf_metrics.py  porlhf_paper_experiment.py  porlhf_paper_experiment_logging_per_epoch.py  preference_comparisons_patch.py  pyproject.toml  run_hyperparam_sweep_porlhf.py  run_porlhf_paper_exp.ipynb  run_porlhf_paper_exp_parallel.py  run_stealy_dan_experiment.py  scalar_feedback.py  setup.py  stealing_gridworld.py  train_reward_model.py  utils.py  value_iteration.py  wandb_utils.py
env_matrices/: SG_gs3_nfp2_nop1_rfd100_rfp1_rfs-200_reward.npy  SG_gs3_nfp2_nop1_rfd100_rfp1_rfs-200_transition.npz  SG_gs5_nfp2_nop1_rfd100_rfp1_rfs-200_reward.npy  SG_gs5_nfp2_nop1_rfd100_rfp1_rfs-200_transition.npz  SG_gs5_nfp2_nop1_rfd1_rfp0_rfs-2_reward.npy
logs/stealing_gridworld/: monitor.csv
notebooks/: stealing_value_iteration.ipynb  stealing_value_iteration_debug.ipynb
